<resources>
    <string name="app_name">Moviepedia</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_title">Sign in</string>
    <string name="signup_title">Sign Up</string>
    <string name="username">Username</string>

    <!-- Bar tabs strings-->
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="movie">Movie</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="error">Error!</string>
    <string name="watchlist">Watchlist</string>
    <string name="watched">Watched</string>
    <string name="series">Series</string>
    <string name="list">List</string>
    <string name="insights">Insights</string>
    <string name="diary">Diary</string>
    <string name="rank">Rank</string>
    <string name="popularMovies">Popular movies</string>
    <string name="PopularTVshow">Popular TV shows</string>
    <string name="popularLists">Popular lists</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TV shows</string>
    <string name="add_watchlist">Add to watchlist</string>
    <string name="review_log">Review or log</string>
    <string name="add_to_list">Add to a list</string>
    <string name="go_to_film">Go to movie</string>
    <string name="go_to_tvshow">Go to TV show</string>
    <string name="overview">Overview</string>
    <string name="info">Info</string>
    <string name="cast">Cast</string>
    <string name="related_movies">Related movies</string>
    <string name="original_title">Original title</string>
    <string name="budget">Budget</string>
    <string name="original_language">Original language</string>
    <string name="revenue">Revenue</string>
    <string name="companies">Companies</string>
    <string name="directed_by">Directed by:</string>
    <string name="no_movies_found">No movies found</string>
    <string name="no_cast_found">No cast found</string>
    <string name="date">Date:</string>
    <string name="writeReview">Write your review...</string>
    <string name="saveReview">Save review</string>
    <string name="seasons">Seasons</string>
    <string name="in_production">In production</string>
    <string name="episodes">Episodes</string>
    <string name="related_tvshow">Related TV show</string>
    <string name="new_list">Create new list</string>
    <string name="create">Create</string>
    <string name="list_name">List name</string>
</resources>