<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/editext"
    android:paddingBottom="@dimen/editext"
    android:background="@color/black">

        <TextView
            android:id="@+id/textview_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:gravity="start"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:gravity="start"
            android:textSize="25dp"
            android:layout_marginLeft="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_settings" />

        <TextView
            android:id="@+id/textview_signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signout"
            android:textColor="@color/fireOpal"
            android:gravity="start"
            android:textSize="25dp"
            android:layout_marginLeft="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/textview_profile"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>