<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/info_row_original_title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/info_row_original_title_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/original_language_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_language"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="@dimen/margin5"
        app:layout_constraintTop_toBottomOf="@+id/info_row_original_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/original_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_language"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/original_language_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_seasons_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seasons"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/margin5"
        app:layout_constraintTop_toBottomOf="@+id/original_language"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_seasons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/info_row_seasons_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_episodes_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/episodes"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/margin5"
        app:layout_constraintTop_toBottomOf="@+id/info_row_seasons"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/info_row_episodes_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_production_in_production_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_production"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/margin5"
        app:layout_constraintTop_toBottomOf="@+id/info_row_episodes"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_in_production"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/info_row_production_in_production_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_production_companies_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/companies"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/margin5"
        app:layout_constraintTop_toBottomOf="@+id/info_row_in_production"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/info_row_production_companies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/info_row_production_companies_header"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>