<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tw_bs_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:gravity="start"
        android:text="@string/new_list"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tw_bs_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:gravity="start"
        android:hint="@string/list_name"
        android:textColorHint="@color/darkestGray"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_bs_list_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_stroke_button"
        android:text="@string/create"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin32"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintTop_toBottomOf="@+id/tw_bs_list_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stateListAnimator="@null"
        android:hapticFeedbackEnabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>