<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_titleBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="start"
            android:textSize="30sp"
            android:layout_marginLeft="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signup_title"
            android:textColor="@color/darkestGray"
            android:textSize="30sp"
            android:layout_marginLeft="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_title"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container_edittext"
        app:layout_constraintTop_toBottomOf="@id/login_titleBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/editext"
            android:textColor="@color/white"
            android:gravity="start|top"
            android:inputType="textEmailAddress"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/editext"
            android:textColor="@color/white"
            android:gravity="start|top"
            android:inputType="textPassword"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_email"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_stroke_button"
        android:text="@string/login_title"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_edittext"
        android:stateListAnimator="@null"
        android:hapticFeedbackEnabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>